@@ -374,7 +374,35 @@ name|solr
 operator|.
 name|search
 operator|.
+name|ReturnFields
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
 name|SolrIndexSearcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|SolrReturnFields
 import|;
 end_import
 
@@ -479,6 +507,44 @@ operator|.
 name|getParams
 argument_list|()
 decl_stmt|;
+name|ReturnFields
+name|returnFields
+init|=
+operator|new
+name|SolrReturnFields
+argument_list|(
+name|rb
+operator|.
+name|req
+argument_list|)
+decl_stmt|;
+name|int
+name|flags
+init|=
+literal|0
+decl_stmt|;
+if|if
+condition|(
+name|returnFields
+operator|.
+name|wantsScore
+argument_list|()
+condition|)
+block|{
+name|flags
+operator||=
+name|SolrIndexSearcher
+operator|.
+name|GET_SCORES
+expr_stmt|;
+block|}
+name|rb
+operator|.
+name|setFieldFlags
+argument_list|(
+name|flags
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|params
@@ -518,20 +584,6 @@ name|req
 operator|.
 name|getSearcher
 argument_list|()
-decl_stmt|;
-name|int
-name|mltcount
-init|=
-name|params
-operator|.
-name|getInt
-argument_list|(
-name|MoreLikeThisParams
-operator|.
-name|DOC_COUNT
-argument_list|,
-literal|5
-argument_list|)
 decl_stmt|;
 if|if
 condition|(
@@ -755,7 +807,7 @@ argument_list|()
 operator|.
 name|docList
 argument_list|,
-name|mltcount
+name|flags
 argument_list|)
 decl_stmt|;
 name|rb
@@ -798,7 +850,7 @@ argument_list|()
 operator|.
 name|docList
 argument_list|,
-name|mltcount
+name|flags
 argument_list|)
 decl_stmt|;
 name|rb
